[package]
name = "randomx-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
signal-hook = "0.3.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
blake3 = "1.4.1"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
hex = "0.4.3"
fluence-keypair = "0.10.3"
randomx-rust-wrapper = "0.1.2"
